<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="action_new_tab">New Tab</string>
    <string name="action_new_bg_tab">Open in background</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_add_bookmark">Add Bookmark</string>
    <string name="action_copy">Copy Link</string>
    <string name="action_forward">Forward</string>
    <string name="settings">Settings</string>
    <string name="agent" translatable="false">User Agent</string>
    <string name="home">Homepage</string>
    <string name="fullscreen">Full-screen Mode</string>
    <string name="java">Enable JavaScript</string>
    <string name="download">Download Location</string>
    <string name="settings_advanced">Advanced Settings</string>
    <string name="apache" translatable="false">Apache License 2.0</string>
    <string name="version">Application Version</string>
    <string name="cache">Clear cache on exit</string>
    <string name="reflow">Enable text reflow</string>
    <string name="block">Block Images</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search Engine</string>
    <string name="search_hint">Search</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
    <string name="dialog_image">What would you like to do with this image?</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="dialog_link">What would you like to do with this link?</string>
    <string name="dialog_history_long_press">What would you like to do with this history item?</string>
    <string name="dialog_bookmark">What would you like to do with this bookmark?</string>
    <string name="action_delete">Delete</string>
    <string name="action_blank">Blank Page</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_mobile">Mobile</string>
    <string name="agent_custom">Custom</string>
    <string name="title_search_engine">Search Engine</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download">Do you want to download this file?</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_warning">Warning</string>
    <string name="title_download_location">Download Location</string>
    <string name="title_custom_homepage">Custom Homepage</string>
    <string name="action_webpage">Webpage</string>
    <string name="title_clear_cookies">Clear Cookies</string>
    <string name="dialog_cookies">Would you like to clear all browser cookies?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="title_text_size">Text Size</string>
    <string name="title_error">Error</string>
    <string name="hint_title">Title</string>
    <string name="hint_url" translatable="false">URL</string>
    <string name="title_edit_bookmark">Edit Bookmark</string>
    <string name="action_edit">Edit</string>
    <string name="action_homepage">Default</string>
    <string name="action_back">Back</string>
    <string name="action_find">Find in Page</string>
    <string name="download_pending">Starting download...</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="problem_download">Invalid URL encountered, cannot download</string>
    <string name="problem_location_download">Cannot download to the specified location</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch Turn Off USB Storage in the notification.</string>
    <string name="message_cache_cleared">Cache Cleared</string>
    <string name="message_import">Bookmarks Were Imported</string>
    <string name="message_clear_history">History Cleared</string>
    <string name="message_cookies_cleared">Cookies Cleared</string>
    <string name="custom_url">Custom URL</string>
    <string name="message_blocked_local">Local file has been blocked from loading</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="suggestion">Search for</string>
    <string name="block_ads">Block Ads</string>
    <string name="message_insecure_connection">Connection to this site is not secure:\n%1$s\nProceed anyway?</string>
    <string name="message_certificate_date_invalid">date of certificate is invalid</string>
    <string name="message_certificate_expired">certificate is expired</string>
    <string name="message_certificate_domain_mismatch">domain in certificate does not match the site domain</string>
    <string name="message_certificate_invalid">certificate is invalid</string>
    <string name="message_certificate_not_yet_valid">certificate is not yet valid</string>
    <string name="message_certificate_untrusted">certificate is not trusted</string>
    <string name="title_form_resubmission">Form Resubmission</string>
    <string name="message_form_resubmission">Would you like to resend the data?</string>
    <string name="title_sign_in">Sign In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="folder_default">Default</string>
    <string name="folder_custom">Custom</string>
    <string name="untitled">Untitled</string>
    <string name="mpl_license" translatable="false">Mozilla Public License v. 2.0</string>
    <string name="freeware">Freeware</string>
    <string name="android_open_source_project" translatable="false">Android Open Source Project</string>
    <string name="hphosts_ad_server_list">hpHosts Ad Server List</string>
    <string name="deleted_tab">Reopened old tab</string>
    <string name="rendering_mode">Rendering Mode</string>
    <string name="name_inverted">Inverted</string>
    <string name="name_grayscale">Grayscale</string>
    <string name="name_inverted_grayscale">Inverted Grayscale</string>
    <string name="name_increase_contrast">Increase Contrast</string>
    <string name="name_normal">Normal</string>
    <string name="title_file_chooser">File Chooser</string>
    <string name="bookmark_export_path">Bookmarks exported to</string>
    <string name="bookmark_export_action">Export Bookmarks</string>
    <string name="bookmark_import_action">Import Bookmarks</string>
    <string name="import_bookmark_error">Could not import bookmarks from file</string>
    <string name="settings_general">General Settings</string>
    <string name="settings_display">Display Settings</string>
    <string name="settings_privacy">Privacy Settings</string>
    <string name="settings_about">About</string>
    <string name="settings_about_explain">Details about version, author and license.</string>
    <string name="close_tab">Close tab</string>
    <string name="close_all_tabs">Close all tabs</string>
    <string name="close_other_tabs">Close other tabs</string>
    <string name="color_mode">Enable Color Mode</string>
    <string name="loading">Loading...</string>
    <string name="snacktory" translatable="false">Snacktory</string>
    <string name="jsoup" translatable="false">jsoup: Java HTML Parser</string>
    <string name="mit_license" translatable="false">MIT License</string>
    <string name="url_contents">URL Box Contents</string>
    <string name="text_encoding">Text Encoding</string>
    <string-array name="url_content_array">
        <item>Domain</item>
        <item>URL  (default)</item>
        <item>Title</item>
    </string-array>
    <string name="dark_theme">Dark Theme</string>
    <string name="tabs">Tabs</string>
    <string name="theme">App Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="black_theme">Black Theme (AMOLED)</string>
    <string name="folder">Folder Name</string>
    <string name="action_folder">Folder</string>
    <string name="action_rename">Rename</string>
    <string name="title_rename_folder">Rename Folder</string>
    <string name="dialog_folder">What would you like to do with this folder?</string>
    <string name="message_web_storage_cleared">Web Storage Cleared</string>
    <string name="tabs_in_drawer">Show tabs in Navigation Drawer</string>
    <string name="do_not_track">Request \"Do Not Track\"</string>
    <string name="remove_identifying_headers">Remove Identifying Headers</string>
    <string name="debug_title">Debug Settings</string>
    <string name="debug_leak_canary" translatable="false">LeakCanary</string>
    <string name="app_restart">Please restart the app for the change to take effect.</string>
    <string name="app_name">Internet Browser</string>
    <string name="lightning_name" translatable="false">Lightning-Browser</string>
    <string name="url_lightning" translatable="false">https://github.com/anthonycr/Lightning-Browser</string>
    <string name="action_open_lightning" translatable="false">Based on LightningBrowser by Anthony Restaino</string>
    <string name="finish_on_pause">Close app if moved to background</string>
    <string name="exit">Exit</string>
    <string name="exit_question">Are you shure you want to close all tabs and delete all private data?</string>
    <string name="title_clear_all">Delete private data</string>
    <string name="dialog_clear_all">Delete all private data: cookies, cache, webstorage etc.</string>
    <string name="message_clear_privatedata">All private data deleted</string>
    <string name="enable_cookies">Enable Cookies</string>
    <string name="tpc_always_disabled">3rd party cookies are always disabled</string>
    <string name="private_data_exit">Clear private data on exit</string>
    <string name="private_data_exit_summary">cookies, web storage, databases</string>
    <string name="allow_screenshots">Allow screenshots and preview</string>
    <string name="screenshots_description">allows screenshots and shows the preview in recent apps view</string>
    <string name="msg_screenshot_title">Attention</string>
    <string name="msg_screenshot_test">The app must be restarted before the change takes effect</string>
    <string name="cd_open_drawer">open drawer</string>
    <string name="cd_search_back">search previous</string>
    <string name="cd_search_next">search next</string>
    <string name="cd_search_quit">quit search</string>
    <string name="cd_tabs_close">close tab</string>
    <string name="cd_tabs_actions">tabs actions</string>
    <string name="dialog_download_permission_denied_header">Permission denied</string>
    <string name="dialog_download_permission_denied_text">Please allow access to Files and Media in the system settings if you want to download files.</string>
    <string name="action_change_permission">go to permissions</string>
    <string name="open_pdf_with_google_docs">Open documents with google docs</string>
    <string name="import_bookmarks_title">Importing Bookmarks</string>
    <string name="import_bookmarks_message">The imported bookmarks will be added to your existing bookmarks.</string>
    <string name="share">Share</string>
</resources>