<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_privacy">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="clear_cache_exit"
            android:title="@string/cache"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="clear_private_data_on_exit"
            android:title="@string/private_data_exit"
            android:summary="@string/private_data_exit_summary"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="finish_on_pause"
            android:title="@string/finish_on_pause"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="do_not_track"
            android:title="@string/do_not_track"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cookies_enabled"
            android:title="@string/enable_cookies"
            android:summary="@string/tpc_always_disabled"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="remove_identifying_headers"
            android:title="@string/remove_identifying_headers"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="open_pdf_with_google_docs"
            android:title="@string/open_pdf_with_google_docs"/>
        <Preference
            android:key="clear_private_data"
            android:title="@string/title_clear_all"/>
    </PreferenceCategory>
</PreferenceScreen>