<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/drawerBackground"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bookmark_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/dividerColor"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/bookmark_back_button"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:background="?attr/actionBarItemBackground"
            android:gravity="center">

            <ImageView
                android:id="@+id/starIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="Favicon"
                android:src="@drawable/ic_action_star"/>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="@string/action_bookmarks"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

    <ListView
        android:id="@+id/right_drawer_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="?attr/listBackground"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/dividerColor"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <FrameLayout
            android:id="@+id/action_add_bookmark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/actionBarItemBackground"
            android:tooltipText="@string/action_add_bookmark"
            android:clickable="true">

            <ImageView
                android:id="@+id/icon_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/action_add_bookmark"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:src="@drawable/ic_action_star"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/action_export_bookmarks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/actionBarItemBackground"
            android:tooltipText="@string/bookmark_export_action"
            android:clickable="true">

            <ImageView
                android:id="@+id/icon_export"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/bookmark_export_action"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:src="@drawable/ic_action_export"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/action_import_bookmarks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/actionBarItemBackground"
            android:tooltipText="@string/bookmark_import_action"
            android:clickable="true">

            <ImageView
                android:id="@+id/icon_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/bookmark_import_action"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:src="@drawable/ic_action_import"/>
        </FrameLayout>

    </LinearLayout>
</LinearLayout>